Add References page and images for news page

--- a/Assignment_4/html/references.html
+++ b/Assignment_4/html/references.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ETA Gaming | developers</title>
-    <link rel="stylesheet" href="../css/developers.css">
+    <link rel="stylesheet" href="../css/references.css">
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../js/developer.js" defer></script>
 </head>
 
 <body>
@@ -34,41 +33,18 @@
             </ul>
         </nav>
     </header>
-    <div class="cards-wrapper">
-        <div class="card-container">
-            <div class="card" id="austine-card">
-                <h2>Austine</h2>
-                <img src="/images/developers/austine/austin.jpeg">
-                <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His
-                    coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the
-                    good to seek love in all darkness.</p>
-                <button onclick="changeCardContent('austine')">CardGame</button>
-            </div>
-        </div>
-
-        <div class="card-container">
-            <div class="card" id="emmanuel-card">
-                <h2>Emmanuel</h2>
-                <img src="/images/developers/emmanuel/emmanuel.jpeg">
-                <p>Emmanuel is a young man from Nigeria, known for his warm spirit and strong determination. Growing up
-                    surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and
-                    resilience. Passionate about learning and connecting with others, Emmanuel strives to make a
-                    positive impact wherever he goes.</p>
-                <button onclick="changeCardContent('emmanuel')">CardGame</button>
-            </div>
-        </div>
-
-        <div class="card-container">
-            <div class="card" id="thiago-card">
-                <h2>Thiago</h2>
-                <img src="/images/developers/thiago/thiago.jpeg">
-                <p>Thiago is a vibrant young man from Brazil, full of energy and creativity. Growing up amidst Brazil’s
-                    lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and
-                    community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion
-                    for new experiences.</p>
-                <button onclick="changeCardContent('thiago')">CardGame</button>
-            </div>
-        </div>
+    <div class="container">
+        <h2>References</h2>
+        <ul class="reference-list">
+        <li><a href="https://store.steampowered.com/news/app/2753900/view/542238020045111606" target="_blank">News - Project Z</a></li>
+        <li><a href="https://store.steampowered.com/news/app/252490/view/498327923676152075" target="_blank">News - Rust</a></li>
+        <li><a href="https://store.steampowered.com/news/app/208650/view/2882822940994638735" target="_blank">News - Batman: Arkham Knight</a></li>
+        <li><a href="https://store.steampowered.com/news/app/3097560/view/497199486905356398" target="_blank">News - Delta Force: Hawk Ops</a></li>
+        <li><a href="https://store.steampowered.com/news/app/230410/view/536608142428997511" target="_blank">News - Warframe</a></li>
+        <li><a href="https://store.steampowered.com/news/app/1085660/view/529853121068794086" target="_blank">News - Destiny 2</a></li>
+        <li><a href="https://store.steampowered.com/news/app/3527290/view/498327545507219292" target="_blank">News - Riven</a></li>
+        <li><a href="https://store.steampowered.com/news/app/1172710/view/546741619672482222" target="_blank">News - Halo: The Master Chief Collection</a></li>
+        </ul>
     </div>
 
     <footer id="footer">
