Fix image links in developers

--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -38,7 +38,7 @@
         <div class="card-container">
             <div class="card" id="austine-card">
                 <h2>Austine</h2>
-                <img src="/images/developers/austine/austin.jpeg">
+                <img src="../images/developers/austine/austin.jpeg">
                 <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His
                     coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the
                     good to seek love in all darkness.</p>
@@ -49,7 +49,7 @@
         <div class="card-container">
             <div class="card" id="emmanuel-card">
                 <h2>Emmanuel</h2>
-                <img src="/images/developers/emmanuel/emmanuel.jpeg">
+                <img src="../images/developers/emmanuel/emmanuel.jpeg">
                 <p>Emmanuel is a young man from Nigeria, known for his warm spirit and strong determination. Growing up
                     surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and
                     resilience. Passionate about learning and connecting with others, Emmanuel strives to make a
@@ -61,7 +61,7 @@
         <div class="card-container">
             <div class="card" id="thiago-card">
                 <h2>Thiago</h2>
-                <img src="/images/developers/thiago/thiago.jpeg">
+                <img src="../images/developers/thiago/thiago.jpeg">
                 <p>Thiago is a vibrant young man from Brazil, full of energy and creativity. Growing up amidst Brazil’s
                     lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and
                     community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion
