Genres function add

--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -52,8 +52,8 @@
 
             <section id="adventure-section" class="genre-section">
             <div class="genre-text">
-                <h2>ADVENTURE</h2>
-                <p>Embark on immersive journeys with compelling stories and rich, open worlds waiting to be explored.</p>
+                <h2 class="hidden">ADVENTURE</h2>
+                <p class="hidden">Embark on immersive journeys with compelling stories and rich, open worlds waiting to be explored.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
@@ -70,8 +70,8 @@
 
             <section id="horror-section" class="genre-section">
             <div class="genre-text">
-                <h2>HORROR</h2>
-                <p>Dive into terrifying experiences where survival, atmosphere, and fear reign supreme.</p>
+                <h2 class="hidden">HORROR</h2>
+                <p class="hidden">Dive into terrifying experiences where survival, atmosphere, and fear reign supreme.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
@@ -88,8 +88,8 @@
 
             <section id="racing-section" class="genre-section">
             <div class="genre-text">
-                <h2>SPORTS</h2>
-                <p>A sports video game is a video game that simulates the practice of sports.</p>
+                <h2 class="hidden">SPORTS</h2>
+                <p class="hidden">A sports video game is a video game that simulates the practice of sports.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
@@ -106,8 +106,8 @@
 
             <section id="strategy-section" class="genre-section">
             <div class="genre-text">
-                <h2>STRATEGY</h2>
-                <p>A player must plan a series of actions against one or more opponents, and the reduction of enemy forces is usually a goal. Victory is achieved through superior planning, and the element of chance takes a smaller role.</p>
+                <h2 class="hidden">STRATEGY</h2>
+                <p class="hidden">A player must plan a series of actions against one or more opponents, and the reduction of enemy forces is usually a goal. Victory is achieved through superior planning, and the element of chance takes a smaller role.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
@@ -124,8 +124,8 @@
 
             <section id="rpg-section" class="genre-section">
             <div class="genre-text">
-                <h2>RPG</h2>
-                <p>A role-playing game (sometimes spelled roleplaying game, or abbreviated as RPG) is a game in which players assume the roles of characters in a fictional setting.</p>
+                <h2 class="hidden">RPG</h2>
+                <p class="hidden">A role-playing game (sometimes spelled roleplaying game, or abbreviated as RPG) is a game in which players assume the roles of characters in a fictional setting.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
@@ -142,8 +142,8 @@
 
             <section id="simulation-section" class="genre-section">
             <div class="genre-text">
-                <h2>SIMULATION</h2>
-                <p>A simulation game attempts to copy various activities from real life in the form of a game for various purposes such as training, analysis, prediction, or entertainment.</p>
+                <h2 class="hidden">SIMULATION</h2>
+                <p class="hidden">A simulation game attempts to copy various activities from real life in the form of a game for various purposes such as training, analysis, prediction, or entertainment.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
