Fix references centering

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -30,7 +30,7 @@
                     <li><a href="./news.html"><span>NEWS</span></a></li>
                     <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
                     <li><a href="./support.html"><span>SUPPORT</span></a></li>
-                    <li><a href="#"><span>REFERENCES</span></a></li>
+                    <li><a href="./references.html"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
         </header>
