--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -48,30 +48,32 @@
             </section>
 
             <section id="about-description">
-                <p>
-                    We are ETA Gaming — a digital hub created by gamers, for gamers.
-                    Our mission is to craft immersive, community-driven experiences that unite players across genres and
-                    platforms. Whether you're a casual explorer, competitive strategist, or retro pixel lover, ETA
-                    Gaming is your next destination.
-                </p>
-                <p>
-                    Founded in 2024 as a student-led initiative, ETA Gaming began with a bold vision: to connect people
-                    through play, creativity, and collaboration. From late-night game jams and UI experiments to a
-                    growing platform for gamers worldwide, we celebrate the diversity and passion that defines gaming
-                    culture.
-                </p>
-                <p>
-                    Our coverage spans everything from new game releases and developer spotlights to industry trends and
-                    live gaming events. With a team of dedicated gamers and storytellers, we deliver content that’s
-                    insightful, authentic, and built with players in mind.
-                </p>
-                <p>
-                    Whether you’re just starting your gaming journey or deep in the high-score chase, ETA Gaming has
-                    something for everyone.
-                </p>
-                <p>
-                    Let's explore the evolving world of gaming, together.
-                </p>
+                <div>
+                    <p>
+                        We are ETA Gaming — a digital hub created by gamers, for gamers.
+                        Our mission is to craft immersive, community-driven experiences that unite players across genres and
+                        platforms. Whether you're a casual explorer, competitive strategist, or retro pixel lover, ETA
+                        Gaming is your next destination.
+                    </p>
+                    <p>
+                        Founded in 2024 as a student-led initiative, ETA Gaming began with a bold vision: to connect people
+                        through play, creativity, and collaboration. From late-night game jams and UI experiments to a
+                        growing platform for gamers worldwide, we celebrate the diversity and passion that defines gaming
+                        culture.
+                    </p>
+                    <p>
+                        Our coverage spans everything from new game releases and developer spotlights to industry trends and
+                        live gaming events. With a team of dedicated gamers and storytellers, we deliver content that’s
+                        insightful, authentic, and built with players in mind.
+                    </p>
+                    <p>
+                        Whether you’re just starting your gaming journey or deep in the high-score chase, ETA Gaming has
+                        something for everyone.
+                    </p>
+                    <p>
+                        Let's explore the evolving world of gaming, together.
+                    </p>
+                </div>
             </section>
 
             <div id="about-mission-vision">
