--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ETA Gaming | developers</title>
-    <link rel="stylesheet" href="../css/developers.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <title>ETA Gaming | Developers</title>
+    <link rel="stylesheet" href="../css/developers.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <script src="../js/developer.js" defer></script>
 </head>
 
 <body>
     <header id="masthead">
         <a href="./home.html">
-            <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
+            <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo" />
         </a>
         <p>ETA Gaming</p>
         <nav class="navbar">
@@ -34,14 +34,13 @@
             </ul>
         </nav>
     </header>
-    <div class="cards-wrapper">
+
+    <main class="cards-wrapper">
         <div class="card-container">
             <div class="card" id="austine-card">
                 <h2>Austine</h2>
-                <img src="../images/developers/austine/austin.jpeg">
-                <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His
-                    coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the
-                    good to seek love in all darkness.</p>
+                <img src="../images/developers/austine/austin.jpeg" alt="Austine">
+                <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the good to seek love in all darkness.</p>
                 <button onclick="changeCardContent('austine')">CardGame</button>
             </div>
         </div>
@@ -49,11 +48,8 @@
         <div class="card-container">
             <div class="card" id="emmanuel-card">
                 <h2>Emmanuel</h2>
-                <img src="../images/developers/emmanuel/emmanuel.jpeg">
-                <p>Emmanuel is a young man from Nigeria, known for his warm spirit and strong determination. Growing up
-                    surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and
-                    resilience. Passionate about learning and connecting with others, Emmanuel strives to make a
-                    positive impact wherever he goes.</p>
+                <img src="../images/developers/emmanuel/emmanuel.jpeg" alt="Emmanuel">
+                <p>Emmanuel is a young man from Nigeria, known for his warm spirit and strong determination. Growing up surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and resilience. Passionate about learning and connecting with others, Emmanuel strives to make a positive impact wherever he goes.</p>
                 <button onclick="changeCardContent('emmanuel')">CardGame</button>
             </div>
         </div>
@@ -61,15 +57,12 @@
         <div class="card-container">
             <div class="card" id="thiago-card">
                 <h2>Thiago</h2>
-                <img src="../images/developers/thiago/thiago.jpeg">
-                <p>Thiago is a vibrant young man from Brazil, full of energy and creativity. Growing up amidst Brazil’s
-                    lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and
-                    community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion
-                    for new experiences.</p>
+                <img src="../images/developers/thiago/thiago.jpeg" alt="Thiago">
+                <p>Thiago is a vibrant young man from Brazil, full of energy and creativity. Growing up amidst Brazil’s lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion for new experiences.</p>
                 <button onclick="changeCardContent('thiago')">CardGame</button>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer id="footer">
         <div class="footer-logo">
@@ -89,9 +82,7 @@
             <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
             <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
         </div>
-        <!-- <div class="footer-divider"></div> -->
         <div class="footer-bottom-right">
-            <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
             <div class="footer-links">
                 <a href="#">PRIVACY POLICY</a>
                 <a href="#">TERMS OF SERVICES</a>
@@ -99,7 +90,6 @@
             </div>
         </div>
     </footer>
-</div>
 </body>
 
 </html>
