Make references responsive and modify events footer

--- a/Assignment_4/html/references.html
+++ b/Assignment_4/html/references.html
@@ -7,6 +7,7 @@
     <title>ETA Gaming | developers</title>
     <link rel="stylesheet" href="../css/references.css">
     <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/references.js"></script>
 </head>
 
 <body>
