Run code through validator

--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
@@ -47,7 +47,7 @@
                 </header>
             </section>
 
-            <section id="about-description">
+            <div id="about-description">
                 <div>
                     <p>
                         We are ETA Gaming — a digital hub created by gamers, for gamers.
@@ -74,7 +74,7 @@
                         Let's explore the evolving world of gaming, together.
                     </p>
                 </div>
-            </section>
+            </div>
 
             <div id="about-mission-vision">
                 <section id="about-mission">
