--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -1,19 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETA Gaming | Developers</title>
-    <link rel="stylesheet" href="../css/developers.css" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/developers.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="../js/developer.js" defer></script>
 </head>
 
 <body>
     <header id="masthead">
         <a href="./home.html">
-            <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo" />
+            <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
         </a>
         <p>ETA Gaming</p>
         <nav class="navbar">
