--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -37,7 +37,7 @@
             </nav>
         </header>
 
-        <section class="carousel">
+        <div class="carousel">
             <div class="slides-container" id="slides-container">
             <!-- Slides are dynamically added via JavaScript -->
             </div>
@@ -48,7 +48,7 @@
             <div class="indicators" id="indicators">
             <!-- Dots will be injected here -->
             </div>
-        </section>
+        </div>
 
             <section id="adventure-section" class="genre-section">
             <div class="genre-text">
