--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -37,11 +37,13 @@
 
         <main>
             <div class="sketchfab-embed-wrapper">
-                <iframe title="Astro bot" frameborder="0" allowfullscreen mozallowfullscreen="true"
-                    webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                    execution-while-out-of-viewport execution-while-not-rendered web-share
-                    src="https://sketchfab.com/models/b2c6372a634f4bd2924364980383f8c0/embed?autostart=1">
-                </iframe>
+                 <iframe 
+                    title="Astro bot"
+                    allowfullscreen
+                    allow="autoplay; fullscreen; xr-spatial-tracking"
+                    src="https://sketchfab.com/models/b2c6372a634f4bd2924364980383f8c0/embed?autostart=1"
+                    >
+            </iframe>
             </div>
 
             <div id="intro">
