--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -48,11 +48,11 @@
 
                     <!-- Slides -->
                     <div class="slides">
-                        <img src="../images/marvel-rivals-wq3mr.png" class="slide" />
-                        <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
-                        <img src="../images/EA-FC-25-Premier-League-POTM-.avif" class="slide" />
-                        <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
-                        <img src="../images/EA-FC-25-Premier-League-POTM-.avif" class="slide" />
+                        <img src="../images/marvel-rivals-wq3mr.png" alt="marvel-rivals" class="slide">
+                        <img src="../images/stanislav-klabik-final-view-01-final.jpg" alt="stanislav-klabik-final" class="slide">
+                        <img src="../images/EA-FC-25-Premier-League-POTM-.avif" alt="Fifa fc 25" class="slide">
+                        <img src="../images/stanislav-klabik-final-view-01-final.jpg" alt="stanislav-klabik-final" class="slide">
+                        <img src="../images/EA-FC-25-Premier-League-POTM-.avif" alt="fifa fc 25" class="slide">
                     </div>
 
                     <!-- Right Arrow -->
@@ -73,10 +73,10 @@
                 <h2>POPULAR STORIES</h2>
         
                 <ul class="popular-list">
-                    <li><img src="../icons/xbox.png" /> The King is Watching .</li>
-                    <li><img src="../icons/steam.png" />Rust Community update</li>
-                    <li><img src="../icons/playstation.png" />Destiny week update</li>
-                    <li><img src="../icons/nintendo-switch.png" /> Arma 3 encore Sale</li>
+                    <li><img src="../icons/xbox.png" alt="xbox"> The King is Watching .</li>
+                    <li><img src="../icons/steam.png" alt="steam" >Rust Community update</li>
+                    <li><img src="../icons/playstation.png" alt="playstation">Destiny week update</li>
+                    <li><img src="../icons/nintendo-switch.png" alt="nintendo-switch"> Arma 3 encore Sale</li>
                 </ul>
             </div>
         </div>
@@ -174,7 +174,6 @@
     </section>
 
     <!-- footer section -->
-    <section>
         <footer id="footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
@@ -203,7 +202,6 @@
                 </div>
             </div>
         </footer>
-    </section>
     <script src="../js/main.js"></script>
     <script src="../js/news.js"></script>
     
