--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ETA Gaming | Support</title>
   <!-- <link rel="stylesheet" href="../css/main.css"> -->
   <link rel="stylesheet" href="../css/support.css">
@@ -95,17 +95,17 @@
 
     <form id="contactForm">
       <div class="input-group">
-        <input type="text" id="firstName" required />
+        <input type="text" id="firstName" required>
         <label for="firstName">First Name</label>
       </div>
 
       <div class="input-group">
-        <input type="text" id="lastName" required />
+        <input type="text" id="lastName" required>
         <label for="lastName">Last Name</label>
       </div>
 
       <div class="input-group">
-        <input type="email" id="email" required />
+        <input type="email" id="email" required>
         <label for="email">Email Address</label>
       </div>
 
