Modify file structure for Vercel deployment

--- a/Assignment_4/index.html
+++ b/Assignment_4/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ETA Gaming | Home</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
     <div id="container">
         <header id="masthead">
-            <a href="./home.html">
-                <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
+            <a href="./index.html">
+                <img src="images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
             </a>
             <p>ETA Gaming</p>
             <nav class="navbar">
@@ -23,14 +23,14 @@
                     <div class="bar"></div>
                 </div>
                 <ul class="nav-links" id="nav-links">
-                    <li><a href="./home.html"><span>HOME</span></a></li>
-                    <li><a href="./genres.html"><span>GENRES</span></a></li>
-                    <li><a href="./events.html"><span>EVENTS</span></a></li>
-                    <li><a href="./about.html"><span>ABOUT</span></a></li>
-                    <li><a href="./news.html"><span>NEWS</span></a></li>
-                    <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
-                    <li><a href="./support.html"><span>SUPPORT</span></a></li>
-                    <li><a href="./references.html"><span>REFERENCES</span></a></li>
+                    <li><a href="./index.html"><span>HOME</span></a></li>
+                    <li><a href="./html/genres.html"><span>GENRES</span></a></li>
+                    <li><a href="./html/events.html"><span>EVENTS</span></a></li>
+                    <li><a href="./html/about.html"><span>ABOUT</span></a></li>
+                    <li><a href="./html/news.html"><span>NEWS</span></a></li>
+                    <li><a href="./html/developers.html"><span>DEVELOPERS</span></a></li>
+                    <li><a href="./html/support.html"><span>SUPPORT</span></a></li>
+                    <li><a href="./html/references.html"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
         </header>
@@ -56,7 +56,7 @@
 
         <footer id="footer">
             <div class="footer-logo">
-                <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
+                <img src="./images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
             <div class="footer-bottom-left">
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
@@ -67,10 +67,10 @@
                 <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
-                <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
-                <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
-                <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
-                <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
+                <a href="#"><img src="./icons/facebook-app-symbol.png" alt="Facebook"></a>
+                <a href="#"><img src="./icons/twitter-black-shape.png" alt="Twitter"></a>
+                <a href="#"><img src="./icons/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="./icons/twitch.png" alt="Twitch"></a>
             </div>
             <!-- <div class="footer-divider"></div> -->
             <div class="footer-bottom-right">
