--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -12,7 +12,7 @@
 <body>
     <!-- navigation bar -->
     <header id="masthead">
-        <a href="./home.html">
+        <a href="../index.html">
             <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
         </a>
         <p>ETA Gaming</p>
@@ -23,7 +23,7 @@
                 <div class="bar"></div>
             </div>
             <ul class="nav-links" id="nav-links">
-                <li><a href="./home.html"><span>HOME</span></a></li>
+                <li><a href="../index.html"><span>HOME</span></a></li>
                 <li><a href="./genres.html"><span>GENRES</span></a></li>
                 <li><a href="./events.html"><span>EVENTS</span></a></li>
                 <li><a href="./about.html"><span>ABOUT</span></a></li>
