Fix on events not working after validation

--- a/Assignment_4/html/eventdebug.html
+++ b/Assignment_4/html/eventdebug.html
@@ -39,10 +39,10 @@
         </header>
 
         <main>
-            <div class="events-welcome-page">
+            <section class="events-welcome-page">
                 <img src="../images/Event_Background_Image/apex-legends-background.png" class="events-background"
                     alt="Apex Legends Event Background Picture">
-                <div class="discover-events">
+                <section class="discover-events">
                     <p>Upcoming Events</p>
                     <a href="#event-list" class="discover-events-link">
                         <svg xmlns="http://www.w3.org/2000/svg" class="discover-events-arrow" viewBox="0 0 16 16">
@@ -52,14 +52,14 @@
                                 d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
                         </svg>
                     </a>
-                </div>
-            </div>
+                </section>
+            </section>
 
-            <div id="event-list">
+            <section id="event-list">
                 <div class="event-card">
                     <img src="../images/fortnite.png" alt="Fortnite Event">
                     <section class="event-details">
-                        <h2>Fortnite Battle Royale</h2>
+                        <h1>Fortnite Battle Royale</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -82,7 +82,7 @@
                 <div class="event-card">
                     <img src="../images/callofduty.jpg" alt="Call of Duty Event">
                     <section class="event-details">
-                        <h2>Call of Duty: Black Ops 6</h2>
+                        <h1>Call of Duty: Black Ops 6</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -105,7 +105,7 @@
                 <div class="event-card">
                     <img src="../images/Batman.jpg" alt="Apex Legends Event">
                     <section class="event-details">
-                        <h2>Batman Arkham Knight</h2>
+                        <h1>Batman Arkham Knight</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -128,7 +128,7 @@
                 <div class="event-card">
                     <img src="../images/EA-FC-25-Premier-League-POTM-.avif" alt="Overwatch Event">
                     <section class="event-details">
-                        <h2>EA Sports FC 25</h2>
+                        <h1>EA Sports FC 25</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -151,7 +151,7 @@
                 <div class="event-card">
                     <img src="../images/zelda.jpg" alt="Valorant Event">
                     <section class="event-details">
-                        <h2>The Legend of Zelda</h2>
+                        <h1>The Legend of Zelda</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -174,7 +174,7 @@
                 <div class="event-card">
                     <img src="../images/forza-background.jpg" alt="League of Legends Event">
                     <section class="event-details">
-                        <h2>Forza Horizon 4</h2>
+                        <h1>Forza Horizon 4</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -197,7 +197,7 @@
                 <div class="event-card">
                     <img src="../images/NBA2k25.jpg" alt="NBA Event">
                     <section class="event-details">
-                        <h2>NBA 2K25</h2>
+                        <h1>NBA 2K25</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -220,7 +220,7 @@
                 <div class="event-card">
                     <img src="../images/mortal-kombat.jpg" alt="Mortal Kombat Event">
                     <section class="event-details">
-                        <h2>Mortal Kombat OG</h2>
+                        <h1>Mortal Kombat OG</h1>
                         <p class="event-date">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <path
@@ -456,10 +456,10 @@
                     <p class="see-physical-location">See ticket for location!</p>
                     <a href="#" class="event-link">RSVP Now</a>
                 </section>
-            </div>
+            </section>
         </main>
 
-        <footer id="footer">
+        <footer id=" footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
@@ -468,8 +468,8 @@
             </div>
             <div class="footer-names">
                 <p class="name" data-number="3178096">AUSTINE</p>
-                <p class="name" data-number="3185934">THIAGO</p>
-                <p class="name" data-number="3173959">EMMANUEL</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
